[SYNCOPE-1929] Console: adding session expiration management (#1232)